# code-sandbox

./: .gitignore  README.md  Sno2FloTrends.py
DMurray_TEcodepractice/: ComprehensiveInformationFlowMetricsCalculator_CZSynch_amfluxtest.py  SourceInfoMetricsWithOutliersV2.py
Deni_Rcode_test/: test_code_czsync.R
Gorski_newcode/: process_visualize_metrics_share.R  pull_temp_obs.R  visualize_metrics_share.R
LLowman_CovidLab/: README.md  delaware-history.csv  lab1_code.m
LPlatt_NextGenBasinSubset/: basin_details_summary.csv  basin_subset.R  basin_subset.csv  basin_subset_all_details.csv
LPlatt_Targets_Example/: 01_download.R  02_process.R  03_visualize.R  README.md  _targets.R
SDymond_TestText/: JOKE.md  README.md
Test/: Test.txt
ZChen_test/: Testgit.txt
aPrice_TestCode/: README.md
aTashie_streamflowSignatures/: .claudeignore  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  compare_restricted_vs_baseline.R  config.R  helperFunctions.R  run_caravan_processing.R  run_full_processing.R  run_ingest_usgs_hydat.R  run_restricted_processing.R  streamflowDataProcessing.R  (+3 more)
aTashie_streamflowSignatures/python/: README.md  pyproject.toml
aTashie_streamflowSignatures/python/streamflow_signatures/: __init__.py  baseflow.py  config.py  elasticity.py  fdc.py  flashiness.py  flow_volumes.py  io.py  metadata.py  pulses.py  qa_qc.py  qp_seasonality.py  recession.py  runoff_ratios.py  signatures.py  stats.py  storage.py  timing.py
aTashie_streamflowSignatures/python/tests/: __init__.py  conftest.py  smoke_test.py  test_against_golden.py  test_signatures.py
(+133 files in other folders)
